--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
 
 }
 
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -18,37 +17,87 @@ body {
     text-align: center;
 }
 
+.header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100vw;
+    height: 90px;
+    background-color: cyan;
+    /*
+    border-style: solid;
+    border-width: 5px;
+    border-color: red;
+    */
+}
+
 /* Navigation Bar */
 .navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    background-color: cyan;
-    padding: 15px 20px;
+    padding: 10px -20px auto;
     color: white;
+    width: 130vh;
+    /*
+    border-style: solid;
+    border-width: 5px;
+    border-color: blueviolet;
+    
+    */
 }
 
 .nav-links {
     list-style: none;
     display: flex;
-    gap: 15px;
+    gap: 40px;
     padding: 0;
+    
 }
 
 .nav-links li {
-    display: inline;
+    display: flex;
+    padding: 12px;
 }
 
 .nav-links a {
     color: white;
     text-decoration: none;
+    font-family: 'Franklin Gothic Medium', 
+    'Arial Narrow', Arial, sans-serif;
+    font-size: 2em;
+}
+
+.nav-links a:hover {
+    color: black;
+}
+
+.nav-links img {
+    width: 60px;
+    height: 60px;
+}
+
+.nav-links img:hover {
+    opacity: 0.5;
+}
+
+/* Header */
+.logo img {
+    width: 100px;
+    height: auto;
+    display: block;
+
+}
+
+.logo img:hover {
+    width: 110px;
+    height: auto;
 }
 
 .logo {
-    length: 100px;
-    width: 100px;
-
+    width: 80vh;
 }
+
 
 /* Featured Photo */
 .featured-photo img {
